disable service worker

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,10 +41,10 @@
       //  registration.unregister()
       // } })
       // Let's register our serviceworker
-       navigator.serviceWorker.register('sw.js', {
+     //  navigator.serviceWorker.register('sw.js', {
         // The scope cannot be parent to the script url
-        scope: './'
-       });
+     //   scope: './'
+     //  });
       
     </script>
   </body>
