update app bar style

--- a/src/components/Layout/style.pcss
+++ b/src/components/Layout/style.pcss
@@ -20,3 +20,18 @@ h3 {
 .link {
   color: #fff !important;
 }
+
+.appbar {
+  background: #fff;
+  box-shadow: none !important;
+}
+
+.rightIcon {
+  margin-left: auto;
+  color: #000 !important;
+}
+
+.title {
+  color: #000;
+  cursor: pointer;
+}
